docs/css/intro.css
/* ... */
.support {
  background-color: var(--base-color);
  border-inline-start: 0.5rem solid var(--shadow);
  color: var(--base-color);
  border-radius: 0.5rem;
  padding: 1em 2em;
}

::view-transition {
  background: var(--base-color);
}
::view-transition-image-pair(root) {
  perspective: 2500px;
  perspective-origin: center;
  transform-style: preserve-3d;
  transform-origin: 50% 50% 100dvw;
  filter: drop-shadow(0px 0px 6px hsl(165deg 11% 3%)) drop-shadow(0px 0px 25px hsl(165deg 11% 3%/50%));
}
::view-transition-old(root),
::view-transition-new(root) {
  animation: 1.5s linear(0,
      0.324 9.1%,
      0.584 18.6%,
      0.782 28.6%,
      0.858 33.8%,
      0.92 39.2%,
      0.997 49.5%,
      1.021 55.1%,
      1.033 61%,
      1.035 71.7%,
      1);
  transform-style: preserve-3d;
  transform-origin: 50% 50% 0;
  /*   perspective: 800px; */
  transform: translateZ(-50vw) scale(var(--scale)) rotatey(var(--rotation)) translatez(50vw);
  backface-visibility: hidden;
}
::view-transition-old(root) {
  animation-name: reveal-out;
}
::view-transition-new(root) {
  animation-name: reveal-in;
}

@property --rotation {
  syntax: "<angle>";
  inherits: false;
  initial-value: 0deg;
}
@property --scale {
  syntax: "<number>";
  inherits: false;
  initial-value: 1;
}

@keyframes reveal-in {
  from {
    --rotation: -90deg;
    animation-timing-function: ease-in-out;
  }
  15% {
    --scale: 0.8;
    --rotation: -90deg;
  }
  85% {
    --scale: 0.8;
    --rotation: 0deg;
    animation-timing-function: ease-in-out;
  }
  to {
    --rotation: 0deg;
  }
}

@keyframes reveal-out {
  from {
    --rotation: 0deg;
    animation-timing-function: ease-in-out;
  }
  15% {
    --scale: 0.8;
    --rotation: 0deg;
  }
  85% {
    --scale: 0.8;
    --rotation: 90deg;
    animation-timing-function: ease-in-out;
  }
  to {
    --rotation: 90deg;
  }
}

body,
html {
  color: var(--text-color);
  scroll-behavior: smooth;
}

body {
  font-size: var(--step-0);
  font-family: var(--font-primary), sans-serif;
  font-style: normal;
  font-weight: normal;
  background: var(--base-color);
  padding-inline: var(--padding-inline);
  letter-spacing: var(--letter-space-content);
}

body::before {
  opacity: 1;
  pointer-events: none;
  content: "";
  width: 100dvw;
  height: 100dvh;
  position: fixed;
  top: 0;
  left: 0;
  background:
    /* Directional lightening gradient */
    var(--directional-gradient),
    /* Main gradient overlay */
    linear-gradient(to bottom,
      var(--body-gradient-top) 0%,
      var(--body-gradient-bottom) 100%),
    /* Vertical grid lines */
    repeating-linear-gradient(90deg,
      var(--body-grid-line) 0px,
      var(--body-grid-line) 1px,
      transparent 1px,
      transparent var(--grid-size)),
    /* Horizontal grid lines */
    repeating-linear-gradient(0deg,
      var(--body-grid-line) 0px,
      var(--body-grid-line) 1px,
      transparent 1px,
      transparent var(--grid-size)),
    /* Base gradient */
    var(--base-gradient);
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
  transition: var(--background-transition);
  backdrop-filter: var(--backdrop-blur);
  -webkit-backdrop-filter: var(--backdrop-blur);

}
body>* {
  /* Ensure all direct children of body are treated as containers */
  container-type: inline-size;
  margin-inline: auto;
}

.wrapper {
  min-height: 100dvh;
  position: relative;
  z-index: 1000;
  letter-spacing: var(--letter-space-content);
  padding-block: var(--padding-block);
  padding-inline: var(--padding-inline);
  margin-inline: auto;
}

.wrapper>* {
  container-type: inline-size;
}

/*------header-------*/
header {
  display: flex;
  flex-direction: row;

  align-items: center;
  margin: var(--space-3xs) 0 0 0;
  user-select: none;
}

header p {
  margin: 0 var(--space-xs) 0 0;
}

header p span {
  color: var(--text-span);
}

/*------navigation-------*/

.navigation {
  margin: 0 0 0 var(--space-xs);
  user-select: none;
  transition: opacity 0.4s ease-in;
}

.nav-links {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: var(--space-xs);
  margin: 0 0 0 var(--space-7xl);
  list-style: none;
  background-color: transparent;
  z-index: 1000;
}

.nav-links li {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0;
  padding: 0 var(--space-xs);
  user-select: none;
  list-style: none;
  background-color: transparent;
  border: 0;
  border-radius: var(--btn-border-radius);
  z-index: 1000;
  cursor: pointer;
  gap: var(--space-6xs);
  transition: transform 0.4s cubic-bezier(.4, 0, .2, 1), opacity 0.4s cubic-bezier(.4, 0, .2, 1);
}

.nav-links li a {
  display: flex;
  flex-direction: column;
  text-decoration: none;
  align-items: center;
  justify-content: center;
  gap: var(--space-6xs);
  color: var(--text-color);
  padding: 0;
  margin: 0;
  user-select: none;
  transition: color 0.3s, background-color 0.3s;
  cursor: pointer;
  border: 0;
  background-color: transparent;
  letter-spacing: var(--letter-space-content);
  word-spacing: var(--word-space-content);
  text-align: center;
}

.nav-links li a span {
  display: inline-block;
  background-color: transparent;
  padding: 0 var(--space-xs);
  white-space: nowrap;
  overflow: hidden;
  margin-inline: auto;
}

.nav-links li svg {
  height: var(--space-m);
  width: var(--space-m);
  object-fit: cover;
  stroke-linecap: round;
  stroke-linejoin: miter;
  color: var(--text-color);
  background-color: transparent;
  opacity: 1;
  display: inline-block;
  transition: color 0.3s, background-color 0.3s;
  /* Add this line */
  user-select: none;
  pointer-events: none;
  /* Prevents SVG from capturing pointer events */
  margin: 0;
  padding: 0;
  border: 0;
  vertical-align: middle;
  box-sizing: border-box;
  stroke-width: var(--space-s);
}
/* ... */

